--- a/67250_webdevlabs/maxwell2-lab1/index.html
+++ b/67250_webdevlabs/maxwell2-lab1/index.html
@@ -16,7 +16,7 @@
 
     <main class="main">
         <h2 style="color:blue; background:lightblue">Hi, my name is Maxwell!</h2>
-        <img src="67250_webdevlabs/maxwell2-lab1/static/maxwell-huang.jpeg" alt="My Profile Picture">
+        <img src="static/maxwell-huang.jpeg" alt="My Profile Picture">
         <p id="intro">Welcome to my personal website where you can learn more about me, my background, and interests.</p>
     </main>
 
