--- a/67250_webdevlabs/maxwell2-lab2/index.html
+++ b/67250_webdevlabs/maxwell2-lab2/index.html
@@ -15,25 +15,26 @@
 
     <header>
         <h1 id="webname">Maxwell Huang</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="views/cv.html">CV</a></li>
+                <li><a href="views/contact.html">Contact me</a></li>
+                <li><a href="views/fun.html">For fun</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main class="main">
-        <h2 style="color:blue; background:lightblue">Hi, my name is Maxwell!</h2>
+        <h2 style="color:grey; background:white">Hi, my name is Maxwell!</h2>
         <img src="static/maxwell-huang.jpeg" alt="My Profile Picture">
         <p id="intro">Welcome to my personal website where you can learn more about me, my background, and interests.</p>
     </main>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="views/cv.html">CV</a></li>
-            <li><a href="views/contact.html">Contact me</a></li>
-            <li><a href="views/fun.html">For fun</a></li>
-        </ul>
-    </nav>
+    
 
     <footer>
-        <p>&copy; 2025 Maxwell Huang. All rights reserved.</p>
+        <p>&copy; Created and Designed by Maxwell Huang :D</p>
     </footer>
 
 </body>
