cv and index update

--- a/67250_webdevlabs/maxwell2-lab3/index.html
+++ b/67250_webdevlabs/maxwell2-lab3/index.html
@@ -4,6 +4,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
+    <script src="static/script.js" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Maxwell Huang">
@@ -26,12 +27,10 @@
     </header>
 
     <main class="main">
-        <h2 style="color:grey; background:white">Hi, my name is Maxwell!</h2>
+        <h2 id="greeting" style="color:grey; background:white">Hi, my name is Maxwell!</h2>
         <img src="static/maxwell-huang.jpeg" alt="My Profile Picture">
         <p id="intro">Welcome to my personal website where you can learn more about me, my background, and interests.</p>
     </main>
-
-    
 
     <footer>
         <p>&copy; Created and Designed by Maxwell Huang :D</p>
